<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCalendar</string>
    <string name="action_settings">Settings</string>
    <string name="title">iCalendar</string>
    <string name="card">Count Down</string>
    <string name="card_pager">My Calendar</string>
    <string name="internet">Load Data</string>
    <string name="sel_date">%s</string>
    <string name="enter">Please enter password below:</string>
    <string name="username">Please enter username below:</string>
    <string name="submit">submit</string>
    <string name="show_pwd">show password</string>
    
    <string name="label_course_test">Course:</string>
    <string name="label_course_assignment">Course:</string>
    <string name="hint_course">eg. CSC301</string>
    
    <string name="label_name_test">Name:</string>
    <string name="hint_name_test">eg. Midterm</string>
    <string name="label_name_assignment">Name:</string>
    <string name="hint_name_assignment">eg. Assignment1</string>
    
    
    <string name="hint_time">00:00</string>
    
    <string name="label_time">Time:</string>
    <string name="label_fromtime">From:</string>
    <string name="label_totime">To:</string>
    
    <string name="label_location">Location:</string>
    <string name="hint_location">eg. EX200</string>
    
    <string name="button_save">Save</string>
 

    <string name="button_current_courses">Current Courses</string>
    
    <string name="title_activity_menu">iCalendar</string>
    <string name="course">Add a course</string>
    <string name="lecture">Add a lecture</string>
    <string name="assignment">Save</string>
    <string name="addCourse">+ New Course</string>
    
    <string name="label_coursecode">Code:</string>
    <string name="label_coursetitle">Title:</string>
    <string name="hint_coursetitle">eg. Intro to Software Engineer</string>
    
    <string name="spinner">Test:</string>

    

    

</resources>
