<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddCourseActivity" >

    <TextView
        android:id="@+id/tv_coursecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_coursecode"
        android:layout_alignBottom="@+id/et_coursecode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_coursecode" />

    <EditText
        android:id="@+id/et_coursecode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_coursetitle"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_border"
        android:digits="QqWwEeRrTtYyUuIiOoPpAaSsDdFfGgHhJjKkLlZzXxCcVvBbNnMm0123456789,.&apos;- "
        android:hint="@string/hint_course"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="35"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tv_coursetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_coursetitle"
        android:layout_alignBottom="@+id/et_coursetitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_coursetitle" />

    <EditText
        android:id="@+id/et_coursetitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_coursecode"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/tv_coursecode"
        android:background="@drawable/text_border"
        android:digits="QqWwEeRrTtYyUuIiOoPpAaSsDdFfGgHhJjKkLlZzXxCcVvBbNnMm0123456789,.&apos;- "
        android:ems="10"
        android:hint="@string/hint_coursetitle"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="35"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="56dp"
        android:onClick="saveNewCourse"
        android:text="@string/button_save" />

</RelativeLayout>